Infra/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
   app: kibana
  name: kibana
  namespace: elk
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 5601
  selector:
    app: kibana
